--- a/Forms/style.css
+++ b/Forms/style.css
@@ -1,10 +1,39 @@
+main {
+  max-width: fit-content;
+  margin: 0 auto;
+}
+
+h1 {
+  text-align: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: rgb(234, 234, 234);
+  padding: 2rem;
+  border-radius: 2rem;
+  box-shadow: 5px 5px 10px gray;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
 .save {
   background-color: rgb(8, 255, 25);
   border-radius: 50%;
-  height: 46.39px;
+  height: 46px;
+  width: 46px;
+  cursor: pointer;
 }
 .reset {
   background-color: rgb(255, 0, 0);
-  height: 50.83px;
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
   /* color: white; */
 }
