--- a/Forms/style.css
+++ b/Forms/style.css
@@ -5,16 +5,20 @@ main {
 
 h1 {
   text-align: center;
+  font-size: 3rem;
 }
 
 form {
+  margin-top: 120px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 10px;
   background-color: rgb(234, 234, 234);
   padding: 2rem;
   border-radius: 2rem;
   box-shadow: 5px 5px 10px gray;
+  transform: scale(160%);
 }
 
 .buttons {
