--- a/react-counter/src/index.css
+++ b/react-counter/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: linear-gradient(30deg, rgb(183, 0, 255), rgb(125, 218, 255));
+}
